...
    );
  }

  return (
    <View style={styles.wrapper}>
      <TopAppBar
        title="Roles"
        showBack
        onBackPress={() => router.back()}
        actions={
          <>
            <Appbar.Action
              icon="magnify"
...
